implemented the other design patterns
(factory for departments, observer for user-companies, builder for resume)